--- a/Website/style.css
+++ b/Website/style.css
@@ -312,6 +312,11 @@ footer {
   transform: translateY(-5px);
 }
 
+#missionSim {
+  background-color: cyan;
+  font-family: "Audiowide";
+  font-size: 14px;
+}
 .links {
   display: flex;
   gap: 25px;
@@ -371,6 +376,12 @@ footer {
 .submit-btn:hover {
   background-color: #52e0c4;
   box-shadow: 0px 0px 10px rgba(100, 255, 218, 0.7);
+}
+
+#simExplain {
+  padding-bottom: 25px;
+  margin-top: 100px;
+  border: 5px solid cyan;
 }
 
 .names {
